fix: polish discovery and default-mappings page styling
- Fix logout button hidden by content (z-index + padding-top)
- Fix discovery panel heading alignment with flexbox
- Compact discovery stats well with inline Refresh Counts button
- Fix sidebar badge positioning for Dataset Discovery
- Redesign default-mappings page: collapsible create form, proper grid
  layout, flexbox headers, compact version table, cleaner upload/copy
  action row

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -134,6 +134,7 @@ code {
   margin-right: 1.04167%;
   margin-bottom: 0px;
   margin-left: 1.04167%;
+  z-index: 1010;
 }
 
 .actor-list {
@@ -164,6 +165,7 @@ code {
 
 #content-wrapper {
   padding-left: 0;
+  padding-top: 35px;
   margin-left: 0;
   width: 100%;
   height: auto;
